--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Бесплатный строительно-выживательный сервер. Без приватов и донат магазина."/>
-    <meta name="og:image" content="%PUBLIC_URL%/server.png"/>
+    <meta name="og:image" content="%PUBLIC_URL%/server.webp"/>
     <meta property="og:image:width" content="100%"/>
     <meta property="og:image:height" content="100%"/>
 
