--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,12 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#ffb400" />
+    <meta name="theme-color" content="#4d8bff" />
     <meta name="description" content="Бесплатный строительно-выживательный сервер. Без приватов и донат магазина."/>
-    <meta name="og:image" content="%PUBLIC_URL%/site_assets/server.webp"/>
+    <meta name="og:image" content="%PUBLIC_URL%/site_assets/link.webp"/>
     <meta name="twitter:card" content="summary_large_image">
-    <meta property="og:image:width" content="100%"/>
-    <meta property="og:image:height" content="100%"/>
+<!--    <meta property="og:image:width" content="100%"/>    -->
+<!--    <meta property="og:image:height" content="100%"/>    -->
     <link type="application/json+oembed" href="oembed.json" />
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
