--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <meta name="theme-color" content="#4d8bff"/>
   <meta name="description" content="Бесплатный строительно-выживательный сервер. Без приватов и донат магазина."/>
-  <meta name="og:image" content="%PUBLIC_URL%/site_assets/link.webp"/>
+  <meta property="og:image" content="%PUBLIC_URL%/site_assets/link.webp"/>
   <meta name="twitter:card" content="summary_large_image">
   <link type="application/json+oembed" href="oembed.json"/>
 
