очень надеюсь последний фикс опен граф

--- a/public/index.html
+++ b/public/index.html
@@ -12,12 +12,12 @@
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png"/>
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
 
-  <!--  <meta name="og:image" content="%PUBLIC_URL%/site_assets/link_1.webp"/>-->
-  <!--  <meta name="og:image" content="%PUBLIC_URL%/site_assets/link_2.webp"/>-->
-  <meta name="og:image" content="%PUBLIC_URL%/site_assets/link_3.webp"/>
-  <!--  <meta name="og:image" content="%PUBLIC_URL%/site_assets/link_4.webp"/>-->
-  <!--  <meta name="og:image" content="%PUBLIC_URL%/site_assets/link_5.webp"/>-->
-  <!--  <meta name="og:image" content="%PUBLIC_URL%/site_assets/link_6.webp"/>-->
+  <!--  <meta name="og:image" content="%PUBLIC_URL%/site_assets/open-graph/link_1.webp"/>-->
+  <!--  <meta name="og:image" content="%PUBLIC_URL%/site_assets/open-graph/link_2.webp"/>-->
+  <meta name="og:image" content="%PUBLIC_URL%/site_assets/open-graph/link_3.webp"/>
+  <!--  <meta name="og:image" content="%PUBLIC_URL%/site_assets/open-graph/link_4.webp"/>-->
+  <!--  <meta name="og:image" content="%PUBLIC_URL%/site_assets/open-graph/link_5.webp"/>-->
+  <!--  <meta name="og:image" content="%PUBLIC_URL%/site_assets/open-graph/link_6.webp"/>-->
 
   <title>GMGame</title>
 </head>
